// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header AssetBundle test generate single rab test buildSelectTreeForGenerateSingleRAB test1 1`] = `
<article
  className="wonder-modal"
>
  <div
    className="modal-item"
  >
    <div
      className="modal-item-header"
    >
      Generate Single RAB
      <img
        onClick={[Function]}
        src="./public/img/close.png"
      />
    </div>
    <div
      className="modal-item-content"
    >
      <article
        className="wonder-selectTree"
      >
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
            >
              <img
                src="./public/img/down.png"
              />
            </div>
            <div
              className="select-box"
            >
              <input
                defaultChecked={false}
                onClick={[Function]}
                type="checkbox"
              />
            </div>
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <span>
              Assets
            </span>
          </li>
          <ul
            className="wonder-tree-node"
          >
            <li>
              <div
                className="item-triangle"
              />
              <div
                className="select-box"
              >
                <input
                  defaultChecked={false}
                  onClick={[Function]}
                  type="checkbox"
                />
              </div>
              <img
                className="treeNode-icon"
                src="./public/img/mat.jpg"
              />
              <span>
                New Material
              </span>
            </li>
          </ul>
          <ul
            className="wonder-tree-node"
          >
            <li>
              <div
                className="item-triangle"
              >
                <img
                  src="./public/img/down.png"
                />
              </div>
              <div
                className="select-box"
              >
                <input
                  defaultChecked={false}
                  onClick={[Function]}
                  type="checkbox"
                />
              </div>
              <img
                className="treeNode-icon"
                src="./public/img/package.png"
              />
              <span>
                New Folder
              </span>
            </li>
            <ul
              className="wonder-tree-node"
            >
              <li>
                <div
                  className="item-triangle"
                />
                <div
                  className="select-box"
                >
                  <input
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                  />
                </div>
                <img
                  className="treeNode-icon"
                  src="newImgBase64"
                />
                <span>
                  image1
                </span>
              </li>
            </ul>
            <ul
              className="wonder-tree-node"
            >
              <li>
                <div
                  className="item-triangle"
                >
                  <img
                    src="./public/img/down.png"
                  />
                </div>
                <div
                  className="select-box"
                >
                  <input
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                  />
                </div>
                <img
                  className="treeNode-icon"
                  src="./public/img/package.png"
                />
                <span>
                  Truck_Geometrys
                </span>
              </li>
              <ul
                className="wonder-tree-node"
              >
                <li>
                  <div
                    className="item-triangle"
                  />
                  <div
                    className="select-box"
                  >
                    <input
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </div>
                  <img
                    className="treeNode-icon"
                    src="./public/img/wdb.png"
                  />
                  <span>
                    Cesium_Milk_Truck_0
                  </span>
                </li>
              </ul>
              <ul
                className="wonder-tree-node"
              >
                <li>
                  <div
                    className="item-triangle"
                  />
                  <div
                    className="select-box"
                  >
                    <input
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </div>
                  <img
                    className="treeNode-icon"
                    src="./public/img/wdb.png"
                  />
                  <span>
                    Cesium_Milk_Truck_1
                  </span>
                </li>
              </ul>
              <ul
                className="wonder-tree-node"
              >
                <li>
                  <div
                    className="item-triangle"
                  />
                  <div
                    className="select-box"
                  >
                    <input
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </div>
                  <img
                    className="treeNode-icon"
                    src="./public/img/wdb.png"
                  />
                  <span>
                    Cesium_Milk_Truck_2
                  </span>
                </li>
              </ul>
              <ul
                className="wonder-tree-node"
              >
                <li>
                  <div
                    className="item-triangle"
                  />
                  <div
                    className="select-box"
                  >
                    <input
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </div>
                  <img
                    className="treeNode-icon"
                    src="./public/img/wdb.png"
                  />
                  <span>
                    Wheels
                  </span>
                </li>
              </ul>
              <ul
                className="wonder-tree-node"
              >
                <li>
                  <div
                    className="item-triangle"
                  />
                  <div
                    className="select-box"
                  >
                    <input
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </div>
                  <img
                    className="treeNode-icon"
                    src="./public/img/wdb.png"
                  />
                  <span>
                    Wheels
                  </span>
                </li>
              </ul>
            </ul>
            <ul
              className="wonder-tree-node"
            >
              <li>
                <div
                  className="item-triangle"
                >
                  <img
                    src="./public/img/down.png"
                  />
                </div>
                <div
                  className="select-box"
                >
                  <input
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                  />
                </div>
                <img
                  className="treeNode-icon"
                  src="./public/img/package.png"
                />
                <span>
                  Materials
                </span>
              </li>
              <ul
                className="wonder-tree-node"
              >
                <li>
                  <div
                    className="item-triangle"
                  />
                  <div
                    className="select-box"
                  >
                    <input
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </div>
                  <img
                    className="treeNode-icon"
                    src="data:image/png;base64 for img-canvas"
                  />
                  <span>
                    truck
                  </span>
                </li>
              </ul>
              <ul
                className="wonder-tree-node"
              >
                <li>
                  <div
                    className="item-triangle"
                  />
                  <div
                    className="select-box"
                  >
                    <input
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </div>
                  <img
                    className="treeNode-icon"
                    src="data:image/png;base64 for img-canvas"
                  />
                  <span>
                    glass
                  </span>
                </li>
              </ul>
              <ul
                className="wonder-tree-node"
              >
                <li>
                  <div
                    className="item-triangle"
                  />
                  <div
                    className="select-box"
                  >
                    <input
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </div>
                  <img
                    className="treeNode-icon"
                    src="data:image/png;base64 for img-canvas"
                  />
                  <span>
                    window_trim
                  </span>
                </li>
              </ul>
              <ul
                className="wonder-tree-node"
              >
                <li>
                  <div
                    className="item-triangle"
                  />
                  <div
                    className="select-box"
                  >
                    <input
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </div>
                  <img
                    className="treeNode-icon"
                    src="data:image/png;base64 for img-canvas"
                  />
                  <span>
                    wheels
                  </span>
                </li>
              </ul>
            </ul>
            <ul
              className="wonder-tree-node"
            >
              <li>
                <div
                  className="item-triangle"
                >
                  <img
                    src="./public/img/down.png"
                  />
                </div>
                <div
                  className="select-box"
                >
                  <input
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                  />
                </div>
                <img
                  className="treeNode-icon"
                  src="./public/img/package.png"
                />
                <span>
                  Textures
                </span>
              </li>
              <ul
                className="wonder-tree-node"
              >
                <li>
                  <div
                    className="item-triangle"
                  />
                  <div
                    className="select-box"
                  >
                    <input
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </div>
                  <img
                    className="treeNode-icon"
                    src="./public/null.png"
                  />
                  <span>
                    texture_0
                  </span>
                </li>
              </ul>
              <ul
                className="wonder-tree-node"
              >
                <li>
                  <div
                    className="item-triangle"
                  />
                  <div
                    className="select-box"
                  >
                    <input
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </div>
                  <img
                    className="treeNode-icon"
                    src="./public/null.png"
                  />
                  <span>
                    texture_1
                  </span>
                </li>
              </ul>
            </ul>
          </ul>
        </ul>
      </article>
    </div>
    <div
      className="modal-item-footer"
    >
      <button
        className="footer-submit"
        onClick={[Function]}
      >
        OK
      </button>
    </div>
  </div>
</article>
`;

exports[`Header AssetBundle test generate single rab test buildSelectTreeForGenerateSingleRAB test2 1`] = `
<article
  className="wonder-modal"
>
  <div
    className="modal-item"
  >
    <div
      className="modal-item-header"
    >
      Generate Single RAB
      <img
        onClick={[Function]}
        src="./public/img/close.png"
      />
    </div>
    <div
      className="modal-item-content"
    >
      <article
        className="wonder-selectTree"
      >
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
            >
              <img
                src="./public/img/down.png"
              />
            </div>
            <div
              className="select-box"
            >
              <input
                defaultChecked={false}
                onClick={[Function]}
                type="checkbox"
              />
            </div>
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <span>
              Assets
            </span>
          </li>
          <ul
            className="wonder-tree-node"
          >
            <li>
              <div
                className="item-triangle"
              />
              <div
                className="select-box"
              >
                <input
                  defaultChecked={false}
                  onClick={[Function]}
                  type="checkbox"
                />
              </div>
              <img
                className="treeNode-icon"
                src="./public/img/package.png"
              />
              <span>
                New Folder
              </span>
            </li>
          </ul>
          <ul
            className="wonder-tree-node"
          >
            <li>
              <div
                className="item-triangle"
              />
              <div
                className="select-box"
              >
                <input
                  defaultChecked={false}
                  onClick={[Function]}
                  type="checkbox"
                />
              </div>
              <img
                className="treeNode-icon"
                src="./public/img/scriptEventFunction.png"
              />
              <span>
                New Script EventFunction
              </span>
            </li>
          </ul>
        </ul>
      </article>
    </div>
    <div
      className="modal-item-footer"
    >
      <button
        className="footer-submit"
        onClick={[Function]}
      >
        OK
      </button>
    </div>
  </div>
</article>
`;
